[package]
name = "origin-hunter"
version = "0.1.0"
edition = "2024"
description = "Discover origin IPs of websites hidden behind Cloudflare and other WAFs"
keywords = ["security", "recon", "cloudflare", "waf", "osint"]
categories = ["command-line-utilities", "network-programming"]
repository = "https://github.com/Steake/origin-hunter"
homepage = "https://github.com/Steake/origin-hunter"
readme = "README.md"

[profile.release]
opt-level = 3
lto = true
strip = true

[dependencies]
anyhow = "1.0.102"
base64 = "0.22"
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
dotenv = "0.15.0"
indicatif = "0.18.4"
murmur3 = "0.5"
regex = "1.11"
reqwest = { version = "0.13.2", features = ["json"] }
scraper = "0.22"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strsim = "0.11"
tokio = { version = "1.50.0", features = ["full"] }
trust-dns-resolver = "0.23.2"
